syntax = "proto3";

option go_package = "./;coinbase_api";

package coinbase_api;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service CoinbaseAPI {
  // Health returns the health of the API.
  rpc HealthGRPC (google.protobuf.Empty) returns (HealthResponse) {}
  rpc RequestFunds(RequestFundsRequest) returns (RequestFundsResponse) {}
  rpc DistributeTransaction(DistributeTransactionRequest) returns (DistributeTransactionResponse) {}
  rpc GetBalance(google.protobuf.Empty) returns (GetBalanceResponse) {}
  rpc SetMalformedUTXOConfig(SetMalformedUTXOConfigRequest) returns (google.protobuf.Empty) {}
}

// swagger:model HealthResponse
message HealthResponse {
  bool ok = 1;
  string details = 2;
  google.protobuf.Timestamp timestamp = 3;
}

// swagger:model RequestFundsRequest
message RequestFundsRequest {
  string address = 1;
  bool disableDistribute = 2;
}

// swagger:model RequestFundsResponse
message RequestFundsResponse {
  bytes tx = 1;
}

// swagger:model DistributeTransactionRequest
message DistributeTransactionRequest {
  bytes tx = 1;
}

// swagger:model ResponseWrapper
message ResponseWrapper {
  string address = 1;
  int64 durationNanos = 2;
  int32 retries = 3;
  string error = 4;
}

// swagger:model DistributeTransactionResponse
message DistributeTransactionResponse {
  string txid = 1;
  google.protobuf.Timestamp timestamp = 2;
  repeated ResponseWrapper responses = 3;
}

// swagger:model GetBalanceResponse
message GetBalanceResponse {
  uint64 number_of_utxos = 1;
  uint64 total_satoshis = 2;
}

// swagger:model SetMalformedUTXOConfigRequest
message SetMalformedUTXOConfigRequest {
  int32 percentage = 1;
  int32 type = 2;
}